--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -1,34 +1,26 @@
 ---
-dependency:
-  name: galaxy
 driver:
   name: docker
 platforms:
   - name: openwrt_x86_64-24.10.4
     image: openwrt/rootfs:x86_64-24.10.4
-    command: sleep infinity
+    command: sh -c "mkdir -p /var/lock; sleep infinity"
     pre_build_image: true
   - name: openwrt_x86_64-23.05.6
     image: openwrt/rootfs:x86_64-23.05.6
-    command: sleep infinity
+    command: sh -c "mkdir -p /var/lock; sleep infinity"
     pre_build_image: true
   - name: openwrt_x86_64-22.03.7
     image: openwrt/rootfs:x86_64-22.03.7
-    command: sleep infinity
+    command: sh -c "mkdir -p /var/lock; sleep infinity"
     pre_build_image: true
   - name: openwrt_x86_64-21.02.7
     image: openwrt/rootfs:x86_64-21.02.7
-    command: sleep infinity
+    command: sh -c "mkdir -p /var/lock; sleep infinity"
     pre_build_image: true
-provisioner:
-  name: ansible
-  playbooks:
-    converge: ${MOLECULE_PLAYBOOK:-converge.yml}
-  env:
-    ANSIBLE_COLLECTIONS_PATH: "${HOME}/.ansible/collections:/usr/share/ansible/collections:${MOLECULE_SCENARIO_DIRECTORY}/../../../.."
-verifier:
-  name: ansible
-lint: |
-  set -e
-  yamllint .
-  ansible-lint .
+scenario:
+  test_sequence:
+    - dependency
+    - create
+    - verify
+    - destroy
