--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -242,11 +242,11 @@ jobs:
       fail-fast: false
       matrix:
         ansible:
-          # - stable-2.17
-          # - stable-2.18
-          # - stable-2.19
+          - stable-2.17
+          - stable-2.18
+          - stable-2.19
           - stable-2.20
-          # - devel
+          - devel
         python:
           - "3.10"
           - "3.11"
