test(integration): fix check mode test params

--- a/tests/integration/targets/command/test/tasks/check-mode.yml
+++ b/tests/integration/targets/command/test/tasks/check-mode.yml
@@ -3,7 +3,7 @@
 - name: Run command with check mode
   community.openwrt.command:
     cmd: "echo checked"
-  check_mode: false
+  check_mode: true
   register: check_out
 
 - name: Display check result
