Group apk tests under a block
Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -132,29 +132,28 @@
         path: /tmp/openwrt_test_file.txt
         state: absent
 
-    - name: Apk install package
-      community.openwrt.apk:
-        name: htop
+    - name: Apk tests
       when: _apk_available.rc == 0
+      block:
+        - name: Apk install package
+          community.openwrt.apk:
+            name: htop
 
-    - name: Apk check package is installed
-      community.openwrt.command:
-        cmd: which htop
-        uses_shell: true
-      when: _apk_available.rc == 0
-      register: _htop_installed
-      failed_when: _htop_installed.rc != 0
+        - name: Apk check package is installed
+          community.openwrt.command:
+            cmd: which htop
+            uses_shell: true
+          register: _htop_installed
+          failed_when: _htop_installed.rc != 0
 
-    - name: Apk uninstall package
-      community.openwrt.apk:
-        name: htop
-        state: absent
-      when: _apk_available.rc == 0
+        - name: Apk uninstall package
+          community.openwrt.apk:
+            name: htop
+            state: absent
 
-    - name: Apk check package is uninstalled
-      community.openwrt.command:
-        cmd: which htop
-        uses_shell: true
-      when: _apk_available.rc == 0
-      register: _htop_installed
-      failed_when: _htop_installed.rc == 0
+        - name: Apk check package is uninstalled
+          community.openwrt.command:
+            cmd: which htop
+            uses_shell: true
+          register: _htop_installed
+          failed_when: _htop_installed.rc == 0
