test(integration): use pytest-ansible

--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -24,3 +24,10 @@ scenario:
     - create
     - verify
     - destroy
+
+# Ensure generated ansible.cfg allows legacy/broken conditionals used by some drivers
+provisioner:
+  name: ansible
+  config_options:
+    defaults:
+      allow_broken_conditionals: True
