--- a/extensions/molecule/integration_test/molecule.yml
+++ b/extensions/molecule/integration_test/molecule.yml
@@ -22,5 +22,12 @@ scenario:
   test_sequence:
     - dependency
     - create
-    - verify
+    - converge
     - destroy
+
+# Ensure generated ansible.cfg allows legacy/broken conditionals used by some drivers
+provisioner:
+  name: ansible
+  config_options:
+    defaults:
+      allow_broken_conditionals: True
