--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -4,7 +4,7 @@ driver:
 platforms:
   - name: openwrt_x86_64-25.12.0-rc1
     image: openwrt/rootfs:x86_64-25.12.0-rc1
-    command: sh -c "sleep infinity"
+    command: sleep infinity
     pre_build_image: true
   - name: openwrt_x86_64-24.10.4
     image: openwrt/rootfs:x86_64-24.10.4
