--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -32,9 +32,9 @@
 
 - name: Check for package manager availability
   ansible.builtin.set_fact:
-    _package_manager_name: "{{ 'apk' if _apk_available.rc == 0 else 'opkg' if _opkg_available.rc == 0 else None }}"
-  failed_when: (openwrt_install_recommended_packages | bool) and not _package_manager_name
+    openwrt_package_manager: "{{ 'apk' if _apk_available.rc == 0 else 'opkg' if _opkg_available.rc == 0 else None }}"
+  failed_when: (openwrt_install_recommended_packages | bool) and not openwrt_package_manager
 
 - name: Install recommended packages for module compatibility
-  ansible.builtin.include_tasks: packages-{{ _package_manager_name }}.yml
+  ansible.builtin.include_tasks: packages-{{ openwrt_package_manager }}.yml
   when: (openwrt_install_recommended_packages | bool)
