Use openwrt_package_manager to control apk test execution
Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -133,7 +133,7 @@
         state: absent
 
     - name: Apk tests
-      when: _apk_available.rc == 0
+      when: openwrt_package_manager == 'apk'
       block:
         - name: Apk install package
           community.openwrt.apk:
