--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -190,3 +190,11 @@
                 that: "'foobar (no such package)' in _apk_result.stderr"
                 fail_msg: "Unexpected stderr {{ _apk_result.stderr }}"
 
+        - name: Apk update_cache and no_cache are mutually exclusive
+          community.openwrt.apk:
+            name: htop
+            update_cache: true
+            no_cache: true
+          register:
+            _apk_result
+          failed_when: _apk_result.msg != "update_cache and no_cache parameters are mutually exclusive"
