--- a/roles/init/meta/main.yml
+++ b/roles/init/meta/main.yml
@@ -1,15 +1,14 @@
 ---
 galaxy_info:
   author: Alexei Znamensky, Markus Weippert
-  description: Configure Ansible for managing OpenWRT devices without Python
+  description: Initialization for community.openwrt
   license: GPL-3.0-or-later
   min_ansible_version: '2.17'
   platforms:
-    - name: GenericLinux
+    - name: OpenWrt
   galaxy_tags:
     - openwrt
     - networking
     - router
-
 dependencies:
   - role: community.openwrt.common
