--- a/roles/common/meta/main.yml
+++ b/roles/common/meta/main.yml
@@ -1,18 +1,13 @@
 ---
 galaxy_info:
-  author: Markus Weippert
-  description: Common handlers for OpenWRT collection
-  company: community
-
+  author: Alexei Znamensky, Markus Weippert
+  description: Common handlers for community.openwrt
   license: GPL-3.0-or-later
-
-  min_ansible_version: "2.9"
-
+  min_ansible_version: '2.17'
   platforms:
     - name: OpenWrt
-      versions:
-        - all
-
-  galaxy_tags: []
-
+  galaxy_tags:
+    - openwrt
+    - networking
+    - router
 dependencies: []
