--- a/roles/init/defaults/main.yml
+++ b/roles/init/defaults/main.yml
@@ -13,7 +13,7 @@ openwrt_scp: "{{ ansible_scp_executable | default('scp') }} {{ ansible_scp_commo
 openwrt_ssh_host: "{{ ansible_host | default(ansible_ssh_host | default(inventory_hostname)) }}"
 openwrt_ssh_user: "{{ ansible_user | default(ansible_ssh_user | default('root')) }}"
 
-# Use SCP instead of SFTP (OpenWRT doesn't have SFTP by default)
+# Use SCP instead of SFTP (OpenWrt doesn't have SFTP by default)
 openwrt_scp_if_ssh: smart
 openwrt_ssh_transfer_method: "{{ 'smart' if openwrt_scp_if_ssh == 'smart' else openwrt_scp_if_ssh | ternary('scp', 'sftp') }}"
 
