Add apk package manager support (#62)
* Initial apk command support

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Add openwrt_x86_64-25.12.0-rc1 molecule platform

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Expect either opkg or apk is present

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Install recommended using apk when available

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Update README.md

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Add basic tests for apk task

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Update copyright year

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* Fix min Openwrt version supported

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* Update copyright year

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* Set version_added metadata property

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* Leverage normalized boolean arg values

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Group apk tests under a block

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Dynamically select packages.yml basing on package manager type

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Update version_added metadata property

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* apk does not need /var/lock dir to be precreated by molecule

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Update sanity check exclusions

Signed-off-by: Krzysztof Białek <kbialek@users.noreply.github.com>

* Revert "Update sanity check exclusions"

This reverts commit f53d9c47b679de1b5685d97af024883a2165a6cf.

* Revert "Revert "Update sanity check exclusions""

This reverts commit beaaf8c85e7afc9d7fa7d84aa1a37ac7c386d2

--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -51,10 +51,10 @@
         that:
           - uci_dhcp_domainneeded.result == "1"
 
-    - name: Verify opkg is available
+    - name: Verify opkg or apk is available
       community.openwrt.command:
-        cmd: which opkg
-      register: opkg_result
+        cmd: "which opkg || which apk"
+        uses_shell: true
       changed_when: false
 
     - name: Verify recommended packages were installed
@@ -131,3 +131,68 @@
       ansible.builtin.file:
         path: /tmp/openwrt_test_file.txt
         state: absent
+
+    - name: Apk tests
+      when: openwrt_package_manager == 'apk'
+      block:
+        - name: Apk install package
+          community.openwrt.apk:
+            name: htop
+          register:
+            _apk_result
+          failed_when: _apk_result.rc != 0
+
+        - name: Apk assert install package stdout
+          ansible.builtin.assert:
+            that: "'Installing htop' in _apk_result.stdout"
+            fail_msg: "Unexpected stdout {{ _apk_result.stdout }}"
+
+        - name: Apk assert install package stderr
+          ansible.builtin.assert:
+            that: "not _apk_result.stderr"
+            fail_msg: "Unexpected stderr {{ _apk_result.stderr }}"
+
+        - name: Apk check package is installed
+          community.openwrt.command:
+            cmd: which htop
+          register: _htop_installed
+          failed_when: _htop_installed.rc != 0
+
+        - name: Apk uninstall package
+          community.openwrt.apk:
+            name: htop
+            state: absent
+
+        - name: Apk check package is uninstalled
+          community.openwrt.command:
+            cmd: which htop
+          register: _htop_installed
+          failed_when: _htop_installed.rc == 0
+
+        - name: Apk install package with error
+          block:
+            - name: Apk try install missing package
+              community.openwrt.apk:
+                name: foobar
+              register:
+                _apk_result
+              failed_when: _apk_result.rc != 1
+
+            - name: Apk assert install missing package stdout
+              ansible.builtin.assert:
+                that: "not _apk_result.stdout"
+                fail_msg: "Unexpected stdout {{ _apk_result.stdout }}"
+
+            - name: Apk assert install missing package stderr
+              ansible.builtin.assert:
+                that: "'foobar (no such package)' in _apk_result.stderr"
+                fail_msg: "Unexpected stderr {{ _apk_result.stderr }}"
+
+        - name: Apk update_cache and no_cache are mutually exclusive
+          community.openwrt.apk:
+            name: htop
+            update_cache: true
+            no_cache: true
+          register:
+            _apk_result
+          failed_when: _apk_result.msg != "update_cache and no_cache parameters are mutually exclusive"
