ci: parametrize openwrt and molecule scenario

--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -2,29 +2,13 @@
 driver:
   name: docker
 platforms:
-  - name: openwrt_x86_64-25.12.0-rc1
-    image: openwrt/rootfs:x86_64-25.12.0-rc1
-    command: sleep infinity
-    pre_build_image: true
-  - name: openwrt_x86_64-24.10.4
-    image: openwrt/rootfs:x86_64-24.10.4
-    command: sh -c "mkdir -p /var/lock; sleep infinity"
-    pre_build_image: true
-  - name: openwrt_x86_64-23.05.6
-    image: openwrt/rootfs:x86_64-23.05.6
-    command: sh -c "mkdir -p /var/lock; sleep infinity"
-    pre_build_image: true
-  - name: openwrt_x86_64-22.03.7
-    image: openwrt/rootfs:x86_64-22.03.7
-    command: sh -c "mkdir -p /var/lock; sleep infinity"
-    pre_build_image: true
-  - name: openwrt_x86_64-21.02.7
-    image: openwrt/rootfs:x86_64-21.02.7
+  - name: openwrt_x86_64-${OPENWRT_VERSION:-24.10.4}
+    image: openwrt/rootfs:x86_64-${OPENWRT_VERSION:-24.10.4}
     command: sh -c "mkdir -p /var/lock; sleep infinity"
     pre_build_image: true
 scenario:
   test_sequence:
     - dependency
     - create
-    - verify
+    - converge
     - destroy
