--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -110,11 +110,17 @@ jobs:
           pull-request-change-detection: false
 
   molecule:
-    name: Molecule (Ⓐ${{ matrix.ansible }}+py${{ matrix.python }})
+    name: >-
+      Molecule
+      (Ⓐ${{ matrix.ansible }}+py${{ matrix.python }}+owrt${{ matrix.openwrt }}+Mol[${{ matrix.scenario }}])
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
+        openwrt:
+          - "25.12.0-rc1"
+          - "24.10.4"
+          - "23.05.6"
         ansible:
           - stable-2.17
           - stable-2.18
@@ -127,6 +133,8 @@ jobs:
           - "3.12"
           - "3.13"
           - "3.14"
+        scenario:
+          - default
         exclude:
           # ansible-core 2.17 doesn't support Python 3.13+
           - ansible: stable-2.17
@@ -174,10 +182,11 @@ jobs:
 
       - name: Run molecule tests (default scenario)
         working-directory: ansible_collections/community/openwrt
-        run: molecule -vv test --scenario-name default
+        run: molecule -vv test --scenario-name ${{ matrix.scenario }}
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
+          OPENWRT_VERSION: "${{ matrix.openwrt }}"
 
   ###
   # Unit tests (OPTIONAL)
