--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -111,8 +111,8 @@ jobs:
 
   molecule:
     name: >-
-      Molecule
-      (Ⓐ${{ matrix.ansible }}+py${{ matrix.python }}+owrt${{ matrix.openwrt }}+Mol[${{ matrix.scenario }}])
+      Molecule - collection-level tests
+      (Ⓐ${{ matrix.ansible }}+py${{ matrix.python }}+owrt${{ matrix.openwrt }}+M[${{ matrix.scenario }}])
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -136,7 +136,7 @@ jobs:
         scenario:
           - default
         exclude:
-          # ansible-core 2.17 doesn't support Python 3.13+
+          &ansible_python_exclusions # ansible-core 2.17 doesn't support Python 3.13+
           - ansible: stable-2.17
             python: "3.13"
           - ansible: stable-2.17
@@ -262,32 +262,7 @@ jobs:
           - "3.12"
           - "3.13"
           - "3.14"
-        exclude:
-          # ansible-core 2.17 doesn't support Python 3.13+
-          - ansible: stable-2.17
-            python: "3.13"
-          - ansible: stable-2.17
-            python: "3.14"
-          # ansible-core 2.18 doesn't support Python 3.10 or 3.14
-          - ansible: stable-2.18
-            python: "3.10"
-          - ansible: stable-2.18
-            python: "3.14"
-          # ansible-core 2.19 doesn't support Python 3.10 or 3.14
-          - ansible: stable-2.19
-            python: "3.10"
-          - ansible: stable-2.19
-            python: "3.14"
-          # ansible-core 2.20 doesn't support Python 3.10 or 3.11
-          - ansible: stable-2.20
-            python: "3.10"
-          - ansible: stable-2.20
-            python: "3.11"
-          # ansible-core 2.21 (devel) doesn't support Python 3.10 or 3.11
-          - ansible: devel
-            python: "3.10"
-          - ansible: devel
-            python: "3.11"
+        exclude: *ansible_python_exclusions
 
     steps:
       - name: >-
