--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -130,6 +130,8 @@ jobs:
           - "3.14"
         scenario:
           - default
+          - role_init_install_recommended_false
+          - role_init_install_recommended_true
         exclude: &ansible-python-exclusions
           - ansible: stable-2.17 # ansible-core 2.17 doesn't support Python 3.13+
             python: "3.13"
