--- a/extensions/molecule/role_init_install_recommended_false/converge.yml
+++ b/extensions/molecule/role_init_install_recommended_false/converge.yml
@@ -5,4 +5,4 @@
   roles:
     - role: community.openwrt.init
       vars:
-        openwrt_install_recommended_packages: true
+        openwrt_install_recommended_packages: false
