--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -12,29 +12,29 @@
     ansible_remote_tmp: "{{ openwrt_remote_tmp }}"
   tags: always
 
-- name: Check for opkg availability
-  community.openwrt.command:
-    cmd: which opkg
-  register: _opkg_available
-  check_mode: false
-  changed_when: false
-  failed_when: false
+- name: Install recommended packages
   when: openwrt_install_recommended_packages | bool
+  block:
+    - name: Check for opkg availability
+      community.openwrt.command:
+        cmd: which opkg
+      register: _opkg_available
+      check_mode: false
+      changed_when: false
+      failed_when: false
 
-- name: Check for apk availability
-  community.openwrt.command:
-    cmd: which apk
-  register: _apk_available
-  check_mode: false
-  changed_when: false
-  failed_when: false
-  when: openwrt_install_recommended_packages | bool
+    - name: Check for apk availability
+      community.openwrt.command:
+        cmd: which apk
+      register: _apk_available
+      check_mode: false
+      changed_when: false
+      failed_when: false
 
-- name: Check for package manager availability
-  ansible.builtin.set_fact:
-    openwrt_package_manager: "{{ 'apk' if _apk_available.rc == 0 else 'opkg' if _opkg_available.rc == 0 else None }}"
-  failed_when: (openwrt_install_recommended_packages | bool) and not openwrt_package_manager
+    - name: Check for package manager availability
+      ansible.builtin.set_fact:
+        openwrt_package_manager: "{{ 'apk' if _apk_available.rc == 0 else 'opkg' if _opkg_available.rc == 0 else None }}"
+      failed_when: not openwrt_package_manager
 
-- name: Install recommended packages for module compatibility
-  ansible.builtin.include_tasks: packages-{{ openwrt_package_manager }}.yml
-  when: (openwrt_install_recommended_packages | bool)
+    - name: Install recommended packages for module compatibility
+      ansible.builtin.include_tasks: packages-{{ openwrt_package_manager }}.yml
