--- a/roles/init/defaults/main.yml
+++ b/roles/init/defaults/main.yml
@@ -8,7 +8,10 @@ openwrt_wait_for_connection: true
 openwrt_wait_for_connection_timeout: 600
 
 # SSH/SCP helper variables for manual operations
-openwrt_ssh: "{{ ansible_ssh_executable | default('ssh') }} {{ ansible_ssh_common_args | default('') }} {{ ansible_ssh_extra_args | default('') }}"
+openwrt_ssh: >
+  {{
+    (ansible_ssh_executable | default('ssh') + " " + ansible_ssh_common_args | default('') + " " + ansible_ssh_extra_args | default('')).strip()
+  }}
 openwrt_scp: "{{ ansible_scp_executable | default('scp') }} {{ ansible_scp_common_args | default('') }} {{ ansible_scp_extra_args | default('') }}"
 openwrt_ssh_host: "{{ ansible_host | default(ansible_ssh_host | default(inventory_hostname)) }}"
 openwrt_ssh_user: "{{ ansible_user | default(ansible_ssh_user | default('root')) }}"
