chore: add/fix license headers to many files

--- a/tests/integration/targets/command/tasks/check-mode.yml
+++ b/tests/integration/targets/command/tasks/check-mode.yml
@@ -1,5 +1,7 @@
----
-# Check-mode tests for command module
+# Copyright (c) 2025, Alexei Znamensky (@russoz)
+# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 - name: Run command with check mode
   community.openwrt.command:
     cmd: "echo checked"
