--- a/extensions/molecule/integration_test/molecule.yml
+++ b/extensions/molecule/integration_test/molecule.yml
@@ -1,4 +1,7 @@
----
+# Copyright (c) 2025, Alexei Znamensky (@russoz)
+# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 driver:
   name: docker
 platforms:
@@ -20,7 +23,6 @@ platforms:
     pre_build_image: true
 scenario:
   test_sequence:
-    - dependency
     - create
     - converge
     - destroy
