--- a/extensions/molecule/role_init_install_recommended_false/molecule.yml
+++ b/extensions/molecule/role_init_install_recommended_false/molecule.yml
@@ -1,4 +1,7 @@
----
+# Copyright (c) 2026, Alexei Znamensky (@russoz)
+# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 driver:
   name: docker
 platforms:
