--- a/tests/integration/targets/command/tasks/main.yml
+++ b/tests/integration/targets/command/tasks/main.yml
@@ -1,6 +1,13 @@
----
-# Tasks only (included by verify playbook)
-- name: "Smoke: run a simple command"
+####################################################################
+# WARNING: These are designed specifically for Ansible tests       #
+# and should not be used as examples of how to write Ansible roles #
+####################################################################
+
+# Copyright (c) 2025, Alexei Znamensky (@russoz)
+# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
+# SPDX-License-Identifier: GPL-3.0-or-later
+
+- name: "Run a simple command"
   community.openwrt.command:
     cmd: "echo test-123"
   register: cmd_out
