--- a/tests/integration/targets/opkg/tasks/main.yml
+++ b/tests/integration/targets/opkg/tasks/main.yml
@@ -7,14 +7,11 @@
   ansible.builtin.include_role:
     name: community.openwrt.init
 
-- name: "Gather system facts to get OpenWrt version"
-  community.openwrt.setup:
-
-- name: "Skip opkg tests for OpenWrt >= 25.12"
+- name: Skip tests when package manager is not opkg
   ansible.builtin.meta: end_play
-  when: ansible_distribution_major_version >= '25'
+  when: openwrt_package_manager != "opkg"
 
-- name: "Install a package (htop)"
+- name: Install a package (htop)
   community.openwrt.opkg:
     name: "htop"
     state: present
