Fixed missing parameter for shell command

--- a/tests/integration/targets/copy/tasks/main.yml
+++ b/tests/integration/targets/copy/tasks/main.yml
@@ -84,6 +84,7 @@
 - name: Print content of remote file
   community.openwrt.command:
     cmd: cat /tmp/test_copy_remote_file.txt
+    uses_shell: true
   register: cat_remote
 
 - name: Assert content of copied file
