--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,6 @@
 # (C) 2025 Alexei Znamensky
-# Licensed under the MIT License. See LICENSES/MIT.txt for details.
-# SPDX-FileCopyrightText: 2025 Alexei Znamensky
-# SPDX-License-Identifier: MIT
+# GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
+# SPDX-License-Identifier: GPL-3.0-or-later
 
 FROM mcr.microsoft.com/devcontainers/python:3.14-bookworm
 
