--- a/tests/integration/targets/command/tasks/main.yml
+++ b/tests/integration/targets/command/tasks/main.yml
@@ -4,7 +4,7 @@
 ####################################################################
 
 # Copyright (c) 2025, Alexei Znamensky (@russoz)
-# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
+# GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 - name: "Run a simple command"
