test(integration): multiple changes
- The test worked when ran standalone in OpenWrt 25.12, but when executed along side with previous (opkg-based versions), it would try and run opkg in 25.12, leading to failure.
  - Changed from `end_play` to `end_host` to ensure the apk-based host (25.12) does not execute the test for opkg - and conversely for the apk test.
- Add 25.12 to the integration tests.

--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -29,8 +29,11 @@
   failed_when: false
 
 - name: Check for package manager availability
+  vars:
+    has_apk: "{{ _apk_available.rc == 0 }}"
+    has_opkg: "{{ _opkg_available.rc == 0 }}"
   ansible.builtin.set_fact:
-    openwrt_package_manager: "{{ 'apk' if _apk_available.rc == 0 else 'opkg' if _opkg_available.rc == 0 else None }}"
+    openwrt_package_manager: "{{ 'apk' if has_apk else ('opkg' if has_opkg else None) }}"
   failed_when: not openwrt_package_manager
 
 - name: Install recommended packages for module compatibility
