--- a/tests/integration/targets/opkg/tasks/main.yml
+++ b/tests/integration/targets/opkg/tasks/main.yml
@@ -8,7 +8,7 @@
     name: community.openwrt.init
 
 - name: Skip tests when package manager is not opkg
-  ansible.builtin.meta: end_play
+  ansible.builtin.meta: end_host
   when: openwrt_package_manager != "opkg"
 
 - name: Install a package (htop)
