--- a/extensions/molecule/integration_test/molecule.yml
+++ b/extensions/molecule/integration_test/molecule.yml
@@ -5,6 +5,10 @@
 driver:
   name: docker
 platforms:
+  - name: openwrt_x86_64-25.12.0-rc4
+    image: openwrt/rootfs:x86_64-25.12.0-rc4
+    command: sh -c "mkdir -p /var/lock; sleep infinity"
+    pre_build_image: true
   - name: openwrt_x86_64-24.10.4
     image: openwrt/rootfs:x86_64-24.10.4
     command: sh -c "mkdir -p /var/lock; sleep infinity"
